--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: Egon.io–The Domain Story Modeler
-description: A open-source tool for visualizing *domain stories*.
+description: A open-source tool for visualizing domain stories.
 show_downloads: true
 github:
   repository_url: https://github.com/WPS/domain-story-modeler
