--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,50 @@
-theme: jekyll-theme-slate
-title: Egon.io–The Domain Story Modeler
-description: A open-source tool for visualizing domain stories.
-show_downloads: true
-github:
-  repository_url: https://github.com/WPS/domain-story-modeler
-  zip_url: https://github.com/WPS/domain-story-modeler/releases/download/v1.2.1/Domain.Story.Modeler.v1.2.1.zip
-  tar_url:
+# Build settings
+markdown: kramdown
+remote_theme: mmistakes/minimal-mistakes@4.24.0
+
+minimal_mistakes_skin    : "contrast" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+# Site Settings
+locale                   : "en"
+title                    : "Egon.io"
+title_separator          : "–"
+subtitle                 : "The Domain Story Modeler" # site tagline that appears below site title in masthead
+name                     : "with ❤️ from WPS – Workplace Solutions"
+description              : "An open-source tool for visualizing domain stories."
+url                      : "https://egon.io/" 
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : "WPS/egon.io-website" # GitHub username/repo-name
+teaser                   : /images/header_dst.jpg # path of fallback teaser image, e.g. "/images/500x300.png"
+logo                     : /images/logo/square/dst_logo_transparent_no-text.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+breadcrumbs              : false # true, false (default)
+words_per_minute         : 200
+
+include:
+  - _pages
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
+#Klingt interessant, läuft aber wohl nicht auf GHP: jekyll_picture_tag
+
+footer:
+  links:
+    - label: "Improve this page"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/WPS/egon.io-website"
+    - label: "Licensed GPLv3"
+      icon: ""
+      url: ""
+    - label: "Imprint"
+      icon: "fas fa-balance-scale"
+      url: "https://www.wps.de/impressum/"
+
+atom_feed:
+  hide: true
