--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,8 +40,8 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/WPS/egon.io-website"
     - label: "Licensed GPLv3"
-      icon: ""
-      url: ""
+      icon: "fab fa-osi"
+      url: "https://www.gnu.org/licenses/gpl-3.0"
     - label: "Imprint"
       icon: "fas fa-balance-scale"
       url: "https://www.wps.de/impressum/"
