Migrate to GitHub Actions deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: "3.9"
 services:
   site:
     build: .
-    image: egon.io/jekyll:latest
+    image: wps/egon.io-website:latest
     command: bundle exec jekyll serve --trace --host 0.0.0.0 --watch --incremental
     environment:
       - JEKYLL_ENV=development
     volumes:
-      - ./docs/:/srv/jekyll
+      - ./:/srv/jekyll
     ports:
       - 4000:4000
