--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
   - title: "Home"
     url: /
-  - title: "User Guide"
+  - title: "User Guide (v2)"
     url: /howto
+  - title: "User Guide (v1)"
+  url: /howto_v1
